// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logs service should generate correct response with log file 1`] = `
"<page-shared />
    
    <p class="backlink-contents">23 bytes</p>
    <p class="backlink-link"><a href="/">Home</a></p>
    
    
    <p class="backlink-contents"><pre>These are logs contents</pre></p>
    <p class="backlink-link"><a href="/">Home</a></p>
    
    "
`;

exports[`logs service should return 500 if no log file 1`] = `
"<page-shared />
    <p class="backlink-contents">No logs available!</p>
    <p class="backlink-link"><a href="/">Home</a></p>
    "
`;
